--- a/app/views/merchant_dashboards/index.html.erb
+++ b/app/views/merchant_dashboards/index.html.erb
@@ -4,6 +4,7 @@
 
 <%= link_to "My Items", "/merchants/#{@merchant.id}/items" %>
 <%= link_to "My Invoices", "/merchants/#{@merchant.id}/invoices" %>
+<%= link_to "My Discounts", "/merchants/#{@merchant.id}/discounts" %>
 
 <div id='fav-customers'>
 <h4>Favorite Customers</h4>
