add create feature to merchant discounts

--- a/app/views/merchant_bulk_discounts/index.html.erb
+++ b/app/views/merchant_bulk_discounts/index.html.erb
@@ -7,3 +7,5 @@
   <%= link_to "Discount Details", "/merchants/#{discount.merchant_id}/discounts/#{discount.id}" %>
 </div>
 <% end %>
+
+<%= link_to "Create New Discount", "/merchants/#{@merchant.id}/discounts/new" %>
