add merchant discount show page

--- a/app/views/merchant_bulk_discounts/show.html.erb
+++ b/app/views/merchant_bulk_discounts/show.html.erb
@@ -1,1 +1,4 @@
-<h3> test </h3>
+<h3> Discount #<%= @discount.id %></h3>
+
+Discount: <%= @discount.discount %>%<p>
+Quantity Threshold: <%= @discount.quantity_threshold %>
