--- a/app/views/admin_invoices/show.html.erb
+++ b/app/views/admin_invoices/show.html.erb
@@ -32,3 +32,6 @@ Created on: <%= @invoice.created_at.strftime("%A, %B %-d, %Y") %>
 <% end %>
 
 <h3>Total revenue expected: <%= InvoiceItem.total_revenue(@invoice) %>
+
+<h3>Total Revenue: <%= number_to_currency(@invoice.total_revenue) %></h3>
+<h3>Total Discounted Revenue: <%= number_to_currency(@invoice.discounted_rev) %></h3>
